<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp_Login">

    <TextView
        android:id="@+id/tv_newUser"
        android:layout_width="347dp"
        android:layout_height="49dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tv_newUser"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/newUserName"
        android:layout_width="251dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_newUser" />

    <EditText
        android:id="@+id/newUserEmail"
        android:layout_width="258dp"
        android:layout_height="40dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUserName"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/newUserPassword"
        android:layout_width="263dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btn_signUp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/newUserPasswordText"
        android:layout_width="97dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Password"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUserEmail" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="20dp"
        android:onClick="NewUser"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUserPasswordText"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_alreadyUser"
        android:layout_width="351dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="29dp"
        android:text="@string/tv_alreadyUser"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/alreadyUserEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signUp"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/alreadyUserEmail"
        android:layout_width="213dp"
        android:layout_height="49dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/alreadyUserPassword"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/alreadyUserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/alreadyUserPasswordText"
        android:layout_width="109dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Password"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginBottom="40dp"
        android:onClick="Check"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="319dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="62dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:text="Name"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="17dp"
        android:text="Email Adress"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/newUserPasswordText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="29dp"
        android:text="Email Adress"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/alreadyUserPasswordText"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>